[project]
name = "har-to-openapi"
version = "0.1.0"
description = "Generate an OpenAPI spec from a HAR file"
authors = [{ name="Nick Loadholtes", email="nick@ironboundsoftware.com"}]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    |\__pycache__
    |docs
    |build
    |dist
    |\.eggs
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["har_to_api"]

[tool.flake8]
max-line-length = 100
ignore = ["E203", "E501", "W503"]

[tool.pytest]
python_files = "tests/*.py"

[metadata]
name = "har-to-openapi"
version = "0.1.0"
description = "Convert the contents of a HAR file to an OpenAPI spec"
long_description = "Longer description of your project"
long_description_content_type = "text/markdown"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = "your, project, keywords"


[options.packages.find]
where = "src"

[options.extras_require]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
]

[options.entry_points]
console_scripts = [
    "har_to_openapi = har_to_openapi:main",
]

